SimpleComplex/Database 1.x, 2018-07-27
--------------------------------------
- MsSql client: remove redundant phrase from native error messages;
  [Microsoft][ODBC ...].

SimpleComplex/Database 1.x, 2018-07-22
--------------------------------------
- Methods messagePrefix() renamed; from errorMessagePrefix().
- DbClient constant DATABASE_INFO_REQUIRED replaced by DATABASE_INFO.
- DbClient support options passed in root of arg databaseInfo; as well as
  options passed in options bucket.
- MsSql client default to use ISO quoted identifier, and support shorthand
  option.

SimpleComplex/Database 1.x, 2018-06-30
--------------------------------------
- Minor test fixes; requires Utils >=1.7.2.

SimpleComplex/Database 1.x, 2018-05-21
--------------------------------------
- Tests use helpers of the Utils package.
- Release 0.9.3.

SimpleComplex/Database 1.x, 2018-05-12
--------------------------------------
- result mode renamed; from cursor mode.
- Query generic options allowed vs. specific options supported;
  and detect query option name misspelling.
- MariaDb auto-detect multi-query.
- Calling MariaDB/MySQL stored procedure _is_ possible with prepared statement
  as well as single simple query.
- Result numRows() methods deprecated because only supported for simple use/edge
  cases; by MariaDB/MySQL as well as SQL Server.
- Release 0.9.2.

SimpleComplex/Database 1.x, 2018-05-12
--------------------------------------
- MySQLi multi-query _is_ executed immediately; not until getting result set.
- Bugfix parameter substitution; wrong checks for parameter count,
  and tampered sql var forgotten.
- MariaDb result false/null checks when using result loader.
- Result nextSet() and nextRow() return boolean; only, not null for none.
- Result methods must be documented as throwing non-specific db runtime
  exception, to allow for exception type mapping; errorsToException().
- Abstract classes renamed; from 'Database...' to 'Db...'.